???? 1.5.0.1

    programmer visible changes:
    * new function SVNTable.count_file_by_path_case_insensitive, replacing inefficient get_item_case_insensitive
    * in utils.unwtar_a_file moved checking of disk checksum only if total_checksum is present in pax_headers so unwtarring old archives that do not have pax_headers and/or total_checksum will be unarchived faster

1/6/2017 1.5.0.0

    user visible changes client:
    * new command: batch, will read instl commands form a file and execute them. Currently limited to do_something mode of commands.
y
    * new PAX wtars are not untarred if all files ar ein place and checksums in wtar file agree with disk checksums
    * faster copy preformance because of batch-ign of unwtar and checksum checkking

    admin visible changes client:
    * new wtar format PAX and checksum is added to each file, and for all files, in the PAX_HEADER

    programmer visible changes:
    * utils.folder_listing renamed utils.disk_item_listing and moved to new file ls.py together with all ls helper functions.
        Added option to list a single file, report partial path instead of full path, and thorough documentation of the format options.
    * new function utils.get_recursive_checksums returns a dict with checksums for each file and a total checksum
    * do_wtar implemented based on utils.get_recursive_checksums
    * do_checksum implemented based on utils.get_recursive_checksums
    * utils.get_file_checksum now has follow_symlinks parameter and if False will checksum the contents of the symlink by calling readlink.
    * YamlReader: better tracking of __include__ files to provide accurate error messages
    * YamlReader.read_yaml_file: exceptions from recursive calls will appear only once
    * new default variable in InstlMisc.yaml: WTAR_IGNORE_FILES, those files which will be ignored when wtar/unwtar is called