@@ -3,7 +3,9 @@
     programmer visible changes:
     * new function SVNTable.count_file_by_path_case_insensitive, replacing inefficient get_item_case_insensitive
     * in utils.unwtar_a_file moved checking of disk checksum only if total_checksum is present in pax_headers so unwtarring old archives that do not have pax_headers and/or total_checksum will be unarchived faster
-
+    * commented out some redundant chmods during copy now that unwtar is done once per install folder
+    * InvocationReporter wraps main() and reports argv and run time for instl invocation. Enabled if ~/instl_config.yaml is present
+    
 1/6/2017 1.5.0.0
 
     user visible changes client:
